--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "chess.js": "^1.1.0",
-    "next": "15.1.7",
+    "next": "^15.1.7",
     "random-js": "^2.1.0",
     "react": "^19.0.0",
     "react-chessboard": "^4.7.2",
     "react-dom": "^19.0.0",
+    "react-spinners": "^0.15.0",
     "stockfish.js": "^10.0.2"
   },
   "devDependencies": {
